--- a/flipiBE/.config.env
+++ b/flipiBE/.config.env
@@ -1,5 +1,5 @@
 PORT=5000
-DATABASE_URL=mongodb://localhost:27017/
+DATABASE_URL=mongodb+srv://kashish271204:o4tahgKuW8a3224W@cluster0.zgr1v.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=fse-project
 
 MAIL_HOST=smtp.gmail.com
