--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "server": "nodemon server/index.js",
+    "server": "nodemon server/index.js"
   },
   "dependencies": {
     "axios": "^1.6.7",
