--- a/server/.config.env
+++ b/server/.config.env
@@ -7,4 +7,4 @@ MONGODB_URI=mongodb+srv://kashish271204:o4tahgKuW8a3224W@cluster0.zgr1v.mongodb.
 JWT_SECRET=buybliss-secret-key
 
 # CORS Origin
-CORS_ORIGIN=http://localhost:6054
+CORS_ORIGIN=https://buy-bliss-three.vercel.app/
