--- a/.env
+++ b/.env
@@ -8,6 +8,6 @@ MONGODB_URI=mongodb+srv://kashish271204:o4tahgKuW8a3224W@cluster0.zgr1v.mongodb.
 JWT_SECRET=buybliss-secret-key
 
 # CORS Origin
-CORS_ORIGIN=https://buy-bliss-three.vercel.app/
+CORS_ORIGIN=http://buybliss-production.up.railway.app/
 
 PROD = "production"
